--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,8 @@
             android:id="@+id/txt_selamatdatang"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Selamat Datang!" />
+            android:text="Selamat Datang!"
+            android:textSize="36dp"/>
 
         <TextView
             android:id="@+id/textView4"
@@ -56,59 +57,41 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Teks yang disimpan" />
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Lihat"
-                android:textAlignment="viewEnd" />
-
-        </LinearLayout>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginTop="4dp" />
+            android:orientation="horizontal"/>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:orientation="horizontal"
+            android:layout_marginTop="100dp"
+            android:orientation="vertical"
             android:paddingStart="4dp"
             android:paddingEnd="4dp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="4dp"
-                android:orientation="vertical"
-                android:paddingEnd="4dp"
+                android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent">
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/TeksKeVideo"
                     android:layout_width="180dp"
                     android:layout_height="150dp" />
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/PenerjemahanIsyarat"
                     android:layout_width="180dp"
                     android:layout_height="150dp"
-                    android:layout_marginTop="4dp"/>
+                    android:layout_marginStart="4dp"/>
 
             </LinearLayout>
 
             <androidx.cardview.widget.CardView
-                android:layout_width="180dp"
-                android:layout_height="match_parent" />
+                android:id="@+id/MateriEdukasi"
+                android:layout_width="fill_parent"
+                android:layout_height="140dp"
+                android:layout_marginTop="4dp"/>
 
         </LinearLayout>
     </LinearLayout>
