--- a/app/src/main/res/layout/activity_penerjemahan_isyarat.xml
+++ b/app/src/main/res/layout/activity_penerjemahan_isyarat.xml
@@ -11,17 +11,60 @@
     <androidx.camera.view.PreviewView
         android:id="@+id/previewView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" >
 
-    <!-- Tombol untuk mengganti kamera -->
-    <Button
-        android:id="@+id/switchCameraButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Switch Camera"
+    </androidx.camera.view.PreviewView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/conf_Camera"
+        android:layout_width="120dp"
+        android:layout_height="56dp"
+        android:background="#80000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="32dp" />
+        app:layout_constraintVertical_bias="0.90">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/switchCameraButton"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                app:cardCornerRadius="48dp"
+                app:cardBackgroundColor="#9D9D9D">
+
+                <ImageView
+                    android:id="@+id/img_switchCameraButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_switchbuttoncamera"/>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/flashCameraButton"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                app:cardCornerRadius="48dp"
+                app:cardBackgroundColor="#9D9D9D">
+
+                <ImageView
+                    android:id="@+id/img_flashCameraButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_flashbuttoncamera"/>
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <!-- Tombol untuk mengganti kamera -->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
