--- a/app/src/main/res/layout/activity_penerjemahan_isyarat.xml
+++ b/app/src/main/res/layout/activity_penerjemahan_isyarat.xml
@@ -7,6 +7,44 @@
     android:layout_height="match_parent"
     tools:context=".PenerjemahanIsyarat">
 
+    <View
+        android:id="@+id/screenFlashOverlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="top"
+        android:background="@drawable/rounded_white"
+        android:visibility="gone"
+        android:alpha="0"
+        tools:ignore="MissingConstraints" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/btn_backPenerjemahanIsyarat"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:cardBackgroundColor="#FFFFFF"
+        app:cardCornerRadius="48dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/img_backPenerjemahanIsyarat"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_buttonback" />
+    </androidx.cardview.widget.CardView>
+
+
+    <!--    <View-->
+<!--        android:id="@+id/screenFlashView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:background="#FFFFFFFF"-->
+<!--        android:visibility="gone"-->
+<!--        android:elevation="10dp" />-->
+
     <!-- PreviewView untuk tampilan kamera -->
     <androidx.camera.view.PreviewView
         android:id="@+id/previewView"
@@ -17,9 +55,10 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/conf_Camera"
-        android:layout_width="120dp"
-        android:layout_height="56dp"
-        android:background="#80000000"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardBackgroundColor="#50FFFFFF"
+        app:cardCornerRadius="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,8 +68,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
-
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:orientation="horizontal"
+            android:gravity="center">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/switchCameraButton"
@@ -51,6 +94,7 @@
                 android:id="@+id/flashCameraButton"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
+                android:layout_marginStart="8dp"
                 app:cardCornerRadius="48dp"
                 app:cardBackgroundColor="#9D9D9D">
 
