--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
 
@@ -17,65 +18,69 @@
         tools:layout_editor_absoluteX="1dp"></LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="20dp"
+        android:layout_marginTop="30dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="45dp">
+        android:paddingStart="20dp"
+        android:paddingTop="10dp"
+        android:paddingEnd="20dp"
+        android:paddingBottom="20dp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="1dp">
 
         <TextView
             android:id="@+id/txt_selamatdatang"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_bold_italic"
             android:text="Selamat Datang!"
-            android:textSize="36dp"/>
+            android:textColor="#007BFF"
+            android:textSize="42dp" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sed ullamcorper massa. Donec finibus finibus risus," />
+            android:fontFamily="@font/poppins_light"
+            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sed ullamcorper massa. Donec finibus finibus risus,"
+            android:textSize="14dp" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="535dp"
+        android:layout_width="412dp"
+        android:layout_height="432dp"
         android:orientation="vertical"
-        android:paddingStart="20dp"
         android:paddingTop="10dp"
-        android:paddingEnd="20dp"
         android:paddingBottom="20dp"
-        tools:layout_editor_absoluteX="-2dp"
-        tools:layout_editor_absoluteY="152dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"/>
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+        tools:layout_editor_absoluteX="-1dp"
+        tools:ignore="MissingConstraints">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
+            android:layout_gravity="center"
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="152dp"
+                android:layout_width="match_parent"
+                android:layout_height="182dp"
                 android:orientation="horizontal"
+                android:gravity="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent">
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/TeksKeVideo"
                     android:layout_width="180dp"
-                    android:layout_height="150dp" >
+                    android:layout_height="150dp"
+                    android:layout_gravity="center"
+                    app:cardElevation="8dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -85,40 +90,42 @@
                         <ImageView
                             android:id="@+id/img_TeksKeVideo"
                             android:layout_width="match_parent"
-                            android:layout_height="60dp"/>
+                            android:layout_height="60dp" />
 
                         <TextView
                             android:id="@+id/txt_TeksKeVideo"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_bold"
+                            android:gravity="center"
                             android:text="Teks Ke Video"
                             android:textSize="14dp"
-                            android:textStyle="bold"
-                            android:gravity="center" />
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/desc_TeksKeVideo"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_light"
+                            android:gravity="center"
                             android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sed ullamcorper massa."
-                            android:textSize="12dp"
-                            android:gravity="center" />
+                            android:textSize="11dp" />
 
                     </LinearLayout>
 
                 </androidx.cardview.widget.CardView>
 
 
-
-
                 <androidx.cardview.widget.CardView
                     android:id="@+id/PenerjemahanIsyarat"
                     android:layout_width="180dp"
                     android:layout_height="150dp"
+                    android:layout_gravity="center"
                     android:layout_marginStart="4dp"
                     android:clickable="true"
-                    android:foreground="?attr/selectableItemBackground"
-                    android:focusable="true">
+                    android:focusable="true"
+                    app:cardElevation="8dp"
+                    android:foreground="?attr/selectableItemBackground">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -128,24 +135,26 @@
                         <ImageView
                             android:id="@+id/img_PenerjemahanIsyarat"
                             android:layout_width="match_parent"
-                            android:layout_height="60dp"/>
+                            android:layout_height="60dp" />
 
                         <TextView
                             android:id="@+id/txt_PenerjemahanIsyarat"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_bold"
+                            android:gravity="center"
                             android:text="Penerjemahan Isyarat"
                             android:textSize="14dp"
-                            android:textStyle="bold"
-                            android:gravity="center" />
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/desc_PenerjemahanIsyarat"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_light"
+                            android:gravity="center"
                             android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sed ullamcorper massa."
-                            android:textSize="12dp"
-                            android:gravity="center" />
+                            android:textSize="11dp" />
 
                     </LinearLayout>
 
@@ -169,27 +178,28 @@
                     <ImageView
                         android:id="@+id/img_MateriEdukasi"
                         android:layout_width="match_parent"
-                        android:layout_height="60dp"/>
+                        android:layout_height="60dp" />
 
                     <TextView
                         android:id="@+id/txt_materiedukasi"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_bold"
+                        android:gravity="center"
                         android:text="Materi Edukasi"
                         android:textSize="14dp"
-                        android:textStyle="bold"
-                        android:gravity="center" />
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/desc_materiedukasi"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_light"
+                        android:gravity="center"
                         android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sed ullamcorper massa."
-                        android:textSize="12dp"
-                        android:gravity="center" />
+                        android:textSize="12dp" />
 
                 </LinearLayout>
-
 
 
             </androidx.cardview.widget.CardView>
@@ -197,16 +207,16 @@
         </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="688dp">
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="44dp"-->
+<!--        android:orientation="horizontal"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.0"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        tools:layout_editor_absoluteY="688dp">-->
 
-    </LinearLayout>
+<!--    </LinearLayout>-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
