fixing fe dashboard

--- a/app/src/main/res/layout/activity_penerjemahan_isyarat.xml
+++ b/app/src/main/res/layout/activity_penerjemahan_isyarat.xml
@@ -23,7 +23,6 @@
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="48dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -79,6 +78,7 @@
                 android:id="@+id/switchCameraButton"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
+                android:layout_margin="1dp"
                 app:cardCornerRadius="48dp"
                 app:cardBackgroundColor="#9D9D9D">
 
@@ -95,6 +95,9 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_marginStart="8dp"
+                android:layout_marginEnd="1dp"
+                android:layout_marginTop="1dp"
+                android:layout_marginBottom="1dp"
                 app:cardCornerRadius="48dp"
                 app:cardBackgroundColor="#9D9D9D">
 
