--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,11 +51,14 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="412dp"
+        android:layout_width="match_parent"
         android:layout_height="432dp"
         android:orientation="vertical"
         android:paddingTop="10dp"
         android:paddingBottom="20dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:gravity="center"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
         tools:layout_editor_absoluteX="-1dp"
@@ -69,18 +72,22 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="182dp"
-                android:orientation="horizontal"
+                android:layout_height="wrap_content"
                 android:gravity="center"
+                android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent">
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/TeksKeVideo"
-                    android:layout_width="180dp"
-                    android:layout_height="150dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    app:cardElevation="8dp">
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="2dp"
+                    android:padding="4dp"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="1dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -89,12 +96,16 @@
 
                         <ImageView
                             android:id="@+id/img_TeksKeVideo"
-                            android:layout_width="match_parent"
-                            android:layout_height="60dp" />
+                            android:layout_width="180dp"
+                            android:layout_height="48dp"
+                            android:layout_marginBottom="8dp"
+                            android:paddingTop="12dp"
+                            android:paddingBottom="4dp"
+                            android:src="@drawable/ic_teks_ke_video" />
 
                         <TextView
                             android:id="@+id/txt_TeksKeVideo"
-                            android:layout_width="match_parent"
+                            android:layout_width="180dp"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/poppins_bold"
                             android:gravity="center"
@@ -105,9 +116,9 @@
                         <TextView
                             android:id="@+id/desc_TeksKeVideo"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="74dp"
                             android:fontFamily="@font/poppins_light"
-                            android:gravity="center"
+                            android:gravity="center|top"
                             android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sed ullamcorper massa."
                             android:textSize="11dp" />
 
@@ -115,17 +126,20 @@
 
                 </androidx.cardview.widget.CardView>
 
-
                 <androidx.cardview.widget.CardView
                     android:id="@+id/PenerjemahanIsyarat"
-                    android:layout_width="180dp"
-                    android:layout_height="150dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginStart="4dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="2dp"
                     android:clickable="true"
                     android:focusable="true"
-                    app:cardElevation="8dp"
-                    android:foreground="?attr/selectableItemBackground">
+                    android:foreground="?attr/selectableItemBackground"
+                    android:padding="4dp"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="1dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -134,12 +148,16 @@
 
                         <ImageView
                             android:id="@+id/img_PenerjemahanIsyarat"
-                            android:layout_width="match_parent"
-                            android:layout_height="60dp" />
+                            android:layout_width="180dp"
+                            android:layout_height="48dp"
+                            android:layout_marginBottom="8dp"
+                            android:paddingTop="12dp"
+                            android:paddingBottom="4dp"
+                            android:src="@drawable/ic_teks_ke_video" />
 
                         <TextView
                             android:id="@+id/txt_PenerjemahanIsyarat"
-                            android:layout_width="match_parent"
+                            android:layout_width="180dp"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/poppins_bold"
                             android:gravity="center"
@@ -150,35 +168,43 @@
                         <TextView
                             android:id="@+id/desc_PenerjemahanIsyarat"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="74dp"
                             android:fontFamily="@font/poppins_light"
-                            android:gravity="center"
+                            android:gravity="center|top"
                             android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sed ullamcorper massa."
                             android:textSize="11dp" />
 
                     </LinearLayout>
-
                 </androidx.cardview.widget.CardView>
 
             </LinearLayout>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/MateriEdukasi"
-                android:layout_width="fill_parent"
-                android:layout_height="140dp"
-                android:layout_marginTop="4dp"
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:clickable="true"
+                android:focusable="true"
+                android:padding="12dp"
+                android:clipToPadding="false"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="1dp"
+                app:cardUseCompatPadding="true">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/img_MateriEdukasi"
                         android:layout_width="match_parent"
-                        android:layout_height="60dp" />
+                        android:layout_height="48dp"
+                        android:layout_marginBottom="8dp"
+                        android:paddingTop="12dp"
+                        android:paddingBottom="4dp"
+                        android:src="@drawable/ic_teks_ke_video" />
 
                     <TextView
                         android:id="@+id/txt_materiedukasi"
@@ -193,20 +219,17 @@
                     <TextView
                         android:id="@+id/desc_materiedukasi"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="48dp"
                         android:fontFamily="@font/poppins_light"
-                        android:gravity="center"
+                        android:gravity="center|top"
                         android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sed ullamcorper massa."
                         android:textSize="12dp" />
 
                 </LinearLayout>
-
-
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
     </LinearLayout>
-
 <!--    <LinearLayout-->
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="44dp"-->
