--- a/app/src/main/res/drawable/rounded_white.xml
+++ b/app/src/main/res/drawable/rounded_white.xml
@@ -1,6 +1,5 @@
 <!-- res/drawable/rounded_white.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#90FFFFFF" /> <!-- Putih setengah transparan -->
-    <corners android:radius="10dp" /> <!-- Biar gak tegas -->
+    <solid android:color="#90FFFFFF" /> <!-- Putih setengah transparan --><!-- Biar gak tegas -->
 </shape>
