--- a/app/src/main/res/layout/activity_materi_edukasi.xml
+++ b/app/src/main/res/layout/activity_materi_edukasi.xml
@@ -8,116 +8,130 @@
     android:background="@color/white"
     tools:context=".MateriEdukasi">
 
+    <!-- Button Back -->
+    <ImageButton
+        android:id="@+id/btn_backEdukasi"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/bg_circle"
+        android:src="@drawable/ic_buttonback"
+        android:scaleType="centerInside"
+        app:tint="@null"
+        android:elevation="1dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="8dp"
         android:orientation="vertical"
         android:paddingStart="20dp"
         android:paddingTop="10dp"
         android:paddingEnd="20dp"
         android:paddingBottom="20dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_backEdukasi"
         tools:layout_editor_absoluteX="1dp">
 
-        <TextView
-            android:id="@+id/txt_edukasi"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_bold_italic"
-            android:textColor="#007BFF"
-            android:textSize="40sp"
-            android:text="@string/underline_edukasi"
-            />
+    <TextView
+        android:id="@+id/txt_edukasi"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_bold_italic"
+        android:textColor="#007BFF"
+        android:textSize="40sp"
+        android:text="@string/underline_edukasi"
+        />
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:fontFamily="@font/poppins_light"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sed ullamcorper massa. Donec finibus finibus risus,"
-            android:textSize="14sp" />
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:fontFamily="@font/poppins_light"
+        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sed ullamcorper massa. Donec finibus finibus risus,"
+        android:textSize="14sp" />
 
-    </LinearLayout>
+</LinearLayout>
+
+<LinearLayout
+android:layout_width="match_parent"
+android:layout_height="522dp"
+app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+tools:layout_editor_absoluteX="-3dp">
+
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginHorizontal="16dp"
+    android:layout_marginVertical="8dp"
+    card_view:cardCornerRadius="8dp"
+    card_view:cardElevation="4dp"
+    card_view:cardUseCompatPadding="true">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="522dp"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        tools:layout_editor_absoluteX="-3dp">
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="12dp">
 
-        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/imageMateri"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@color/design_default_color_background"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_launcher_foreground" />
+
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginVertical="8dp"
-            card_view:cardCornerRadius="8dp"
-            card_view:cardElevation="4dp"
-            card_view:cardUseCompatPadding="true">
+            android:layout_marginStart="12dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/textJudul"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:padding="12dp">
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="Pengenalan Bahasa Isyarat"
+                android:textColor="#000000"
+                android:textSize="14sp"
+                android:fontFamily="@font/poppins_bold"/>
 
-                <ImageView
-                    android:id="@+id/imageMateri"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:background="@color/design_default_color_background"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/ic_launcher_foreground" />
+            <TextView
+                android:id="@+id/textJumlah"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:text="5 Materi"
+                android:fontFamily="@font/poppins_regular"
+                android:textColor="#666666"
+                android:textSize="12sp" />
 
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
+            <ProgressBar
+                android:id="@+id/progressMateri"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="6dp"
+                android:layout_marginTop="6dp"
+                android:max="100"
+                android:progress="40"
+                android:progressDrawable="@drawable/progress_bar_custom" />
 
-                    <TextView
-                        android:id="@+id/textJudul"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="end"
-                        android:maxLines="1"
-                        android:text="Pengenalan Bahasa Isyarat"
-                        android:textColor="#000000"
-                        android:textSize="14sp"
-                        android:fontFamily="@font/poppins_bold"/>
-
-                    <TextView
-                        android:id="@+id/textJumlah"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="2dp"
-                        android:text="5 Materi"
-                        android:fontFamily="@font/poppins_regular"
-                        android:textColor="#666666"
-                        android:textSize="12sp" />
-
-                    <ProgressBar
-                        android:id="@+id/progressMateri"
-                        style="?android:attr/progressBarStyleHorizontal"
-                        android:layout_width="match_parent"
-                        android:layout_height="6dp"
-                        android:layout_marginTop="6dp"
-                        android:max="100"
-                        android:progress="40"
-                        android:progressDrawable="@drawable/progress_bar_custom" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
+        </LinearLayout>
 
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
+
+</LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
