--- a/app/src/main/res/layout/activity_penerjemahan_isyarat.xml
+++ b/app/src/main/res/layout/activity_penerjemahan_isyarat.xml
@@ -17,24 +17,33 @@
         android:alpha="0"
         tools:ignore="MissingConstraints" />
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="16dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="1dp"></LinearLayout>
+
+    <androidx.camera.view.PreviewView
+        android:id="@+id/previewView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+    </androidx.camera.view.PreviewView>
+
+    <ImageButton
         android:id="@+id/btn_backPenerjemahanIsyarat"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        app:cardCornerRadius="48dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/bg_circle"
+        android:src="@drawable/ic_buttonback"
+        android:scaleType="centerInside"
+        app:tint="@null"
+        android:elevation="1dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/img_backPenerjemahanIsyarat"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerInside"
-            android:src="@drawable/ic_buttonback" />
-    </androidx.cardview.widget.CardView>
-
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <!--    <View-->
 <!--        android:id="@+id/screenFlashView"-->
@@ -44,13 +53,31 @@
 <!--        android:visibility="gone"-->
 <!--        android:elevation="10dp" />-->
 
-    <!-- PreviewView untuk tampilan kamera -->
-    <androidx.camera.view.PreviewView
-        android:id="@+id/previewView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+<!--     PreviewView untuk tampilan kamera -->
 
-    </androidx.camera.view.PreviewView>
+    <TextView
+        android:id="@+id/txt_terjemahan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:layout_marginTop="8dp"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
+        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sed ullamcorper massa. Donec finibus finibus risus,"
+        android:textColor="#FFFFFF"
+        android:fontFamily="@font/poppins_light"
+        android:textSize="14dp"
+        android:padding="8dp"
+        android:background="@drawable/bg_round"
+        android:elevation="2dp"
+        android:maxHeight="120dp"
+        android:maxWidth="340dp"
+        app:layout_constraintBottom_toTopOf="@+id/conf_Camera"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5" />
+
+
 
     <androidx.cardview.widget.CardView
         android:id="@+id/conf_Camera"
