--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#007BFF</color>
+    <color name="soft_blue">#ADD8E6</color>
+    <color name="gray">#9D9D9D</color>
 </resources>
