--- a/app/src/main/res/layout/activity_materi_edukasi.xml
+++ b/app/src/main/res/layout/activity_materi_edukasi.xml
@@ -57,82 +57,16 @@
 
 </LinearLayout>
 
-<LinearLayout
-android:layout_width="match_parent"
-android:layout_height="522dp"
-app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-tools:layout_editor_absoluteX="-3dp">
+    <!-- RecyclerView untuk daftar materi -->
+<androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/rvMateri"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:padding="8dp"
+    app:layout_constraintTop_toBottomOf="@id/linearLayout2"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    tools:listitem="@layout/item_edukasi_materi" />
 
-<androidx.cardview.widget.CardView
-    android:id="@+id/EdukasiSubab"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginHorizontal="16dp"
-    android:layout_marginVertical="8dp"
-    card_view:cardCornerRadius="8dp"
-    card_view:cardElevation="4dp"
-    card_view:cardUseCompatPadding="true">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="12dp">
-
-        <ImageView
-            android:id="@+id/imageMateri"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:background="@color/design_default_color_background"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_launcher_foreground" />
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textJudul"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:text="Pengenalan Bahasa Isyarat"
-                android:textColor="#000000"
-                android:textSize="14sp"
-                android:fontFamily="@font/poppins_bold"/>
-
-            <TextView
-                android:id="@+id/textJumlah"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:text="5 Materi"
-                android:fontFamily="@font/poppins_regular"
-                android:textColor="#666666"
-                android:textSize="12sp" />
-
-            <ProgressBar
-                android:id="@+id/progressMateri"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="match_parent"
-                android:layout_height="6dp"
-                android:layout_marginTop="6dp"
-                android:max="100"
-                android:progress="40"
-                android:progressDrawable="@drawable/progress_bar_custom" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-</androidx.cardview.widget.CardView>
-
-</LinearLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
