--- a/app/src/main/res/layout/activity_edukasi_subab.xml
+++ b/app/src/main/res/layout/activity_edukasi_subab.xml
@@ -21,7 +21,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/deteksiisyarat"
+                android:src="@drawable/cover_isyarat"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
