--- a/app/src/main/res/layout/activity_penerjemahan_isyarat.xml
+++ b/app/src/main/res/layout/activity_penerjemahan_isyarat.xml
@@ -63,12 +63,12 @@
         android:layout_marginTop="8dp"
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
-        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sed ullamcorper massa. Donec finibus finibus risus,"
-        android:textColor="#FFFFFF"
-        android:fontFamily="@font/poppins_light"
-        android:textSize="14dp"
+        android:text="Terjemahan akan tampil disini."
+        android:textColor="#000000"
+        android:fontFamily="@font/poppins_bold"
+        android:textSize="18dp"
         android:padding="8dp"
-        android:background="@drawable/bg_round"
+        android:background="@drawable/bg_round_solid"
         android:elevation="2dp"
         android:maxHeight="120dp"
         android:maxWidth="340dp"
